CHANGELOG FOR ATOMSK
====================


Master
------
- in mode "--one-in-all", added possibility to read configurations from VASP OUTCAR files.
- improved the determination of atom species from POTCAR file when reading VASP POSCAR, CONTCAR or OUTCAR files.
- added possibility to output to standard output (stdout) by using "-" as file name.
- fixed a bug in mode "--polycrystal" that prevented constructing 2-D polycrystals normal to X or Y.
- fixed a bug in option "-add-atom" that caused a segfault when the atom list was empty (not allocated).


Beta 0.11 (12 Jan. 2021)
------------------------
- parts of the code were parallelized with OpenMP, meaning that it can take advantage of all cores of a CPU. Some modes and options that are now parallelized: neighbor search; options "-orthogonal-cell", "-select stl"; modes "--density", "--edm", "--polycrystal", "--rdf". Thanks to Jian-Hui Zhai, University of Lille, France, for initiating this speeding up of Atomsk.
- added support for reading and writing files in BOPfox format (*.bx). Thanks to Matous Mrovec, ICAMS, Bochum University, Germany, for implementing this feature.
- added support for reading and writing files in Comma-Separated Values format (*.csv).
- added support for reading and writing files in CRYSTAL format (*.d12).
- added support for reading and writing files in ABINIT format (*.in).
- added support for reading and writing files in SIESTA Flexible Data Format (*.fdf).
- new option "-cell" allows to modify cell vectors more easily.
- new option "-nthreads" to control the number of OpenMP threads.
- new option "-reduce-cell" allows finding an equivalent smaller cell to a system, while respecting its periodicity.
- new option "-roundoff" allows to round off atom coordinates or the values of a property.
- new module to evaluate mathematical expressions and convert them into real numbers. It supports common mathematical functions like abs, sqrt, trigonometric functions, and so on.