@@ -7,6 +7,7 @@ Master
 - in mode "--one-in-all", added possibility to read configurations from VASP OUTCAR files.
 - improved the determination of atom species from POTCAR file when reading VASP POSCAR, CONTCAR or OUTCAR files.
 - added possibility to output to standard output (stdout) by using "-" as file name.
+- fixed a bug where coordinates would be detected as Cartesian instead of reduced if the cell was very small.
 - fixed a bug in mode "--polycrystal" that prevented constructing 2-D polycrystals normal to X or Y.
 - fixed a bug in option "-add-atom" that caused a segfault when the atom list was empty (not allocated).
 
